--- a/4. Tipos de datos complejos.ipynb
+++ b/4. Tipos de datos complejos.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPaVguWKA9z5ZOcbmz7bqac",
+      "authorship_tag": "ABX9TyOui8PUiTRBblTnc5ac8zSp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Tipos de datos complejos\n",
+        "## Listas\n",
         "\n",
         "Son tipos de datos más avanzados que str, float, int o bool. <br>\n",
         "\n",
@@ -551,7 +550,7 @@
         },
         "outputId": "c20ed5fa-31bb-4c01-d0b6-ca94453b9942"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,7 +577,7 @@
         },
         "outputId": "17fbe2f7-8e8e-4d75-a487-9c30a2c4205f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +604,7 @@
         },
         "outputId": "46f4211c-b6aa-4496-d7ae-dac2ce101ee0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -641,7 +640,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,51 +1086,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Diccionarios"
-      ],
-      "metadata": {
-        "id": "p8Qm4kLUAd4J"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0a53WyumAdiF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Conjuntos"
-      ],
-      "metadata": {
-        "id": "WA7kOPlZAg9Z"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2ajhuthO-aav"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "CwXUFASYAqg4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Operadores de pertenecia"
       ],
       "metadata": {
@@ -1173,7 +1127,7 @@
         },
         "outputId": "d4c62fc7-54f1-4c79-8647-f4e1f73e94fe"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1252,24 +1206,6 @@
       ],
       "metadata": {
         "id": "r4gg748KC2zr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Tipos de datos avanzados"
-      ],
-      "metadata": {
-        "id": "Jsb8zN5cAoOy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gfgC4SRYiT1H"
       },
       "execution_count": null,
       "outputs": []
