--- a/Ejercicios/Proyecto.ipynb
+++ b/Ejercicios/Proyecto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFbWucE0yKvPubntToNpLa",
+      "authorship_tag": "ABX9TyP7gW7ak5P9IWOaAtFTrnT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +45,9 @@
         "Para conseguir cerebros deberás tirar los dados que tienen las siguietnes caras: cerebros, huellas y disparos.\n",
         "\n",
         "El juego contiene 3 tipos de víctimcas (dados) que perseguiras: \n",
-        "- verdes: humanos fáciles de cazar (más cerebros pocos disparos)\n",
-        "- amarillos: humanos medianamente fáciles de cazar (menos cerebros y más disparos)\n",
-        "- rojos: humanos muy difíciles de cazar (pocos cerebros y muchos disparos)\n",
+        "- verdes: humanos fáciles de cazar (más cerebros pocos disparos). Sus caras son: 3 cerebros, 2 huellas y un disparo.\n",
+        "- amarillos: humanos medianamente fáciles de cazar (menos cerebros y más disparos): 2 cerebros, 2 huellas, 2 disparos.\n",
+        "- rojos: humanos muy difíciles de cazar (pocos cerebros y muchos disparos). Sus caras son: 3 disparos, 2 huellas, 1 cerebro.\n",
         "\n",
         "Tomas 3 dados (de los 13 disponibles) y los tiras. Si obtienes un cerebro, obtienes un punto, pero si obtienes un disparo pierdes un punto de vida. \n",
         "\n",
