--- a/Ejercicios/Proyecto.ipynb
+++ b/Ejercicios/Proyecto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7gW7ak5P9IWOaAtFTrnT4",
+      "authorship_tag": "ABX9TyPSgSzX1NUWZFFEz4tE9lgQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,11 @@
         "\n",
         "Tomas 3 dados (de los 13 disponibles) y los tiras. Si obtienes un cerebro, obtienes un punto, pero si obtienes un disparo pierdes un punto de vida. \n",
         "\n",
-        "Si saca unas huellas, su objetivo habrá escapado y ese dado se podrá volver a lanzar."
+        "Si saca unas huellas, su objetivo habrá escapado y ese dado se podrá volver a lanzar.\n",
+        "\n",
+        "**Contenido:**\n",
+        "\n",
+        "- 13 dados: 6 verdes, 4 amarillos, y 3 rojos"
       ],
       "metadata": {
         "id": "ThvAJhu7NLsk"
