--- a/9. Tipos de datos avanzados.ipynb
+++ b/9. Tipos de datos avanzados.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjnISB4xj1JhFDUhCJvsAX",
+      "authorship_tag": "ABX9TyMbXUGUjuQujHh9OjlqQcZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/9. Tipos%20de%20datos%20avanzados.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/9.%20Tipos%20de%20datos%20avanzados.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -484,8 +484,60 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Seaborn"
+      ],
+      "metadata": {
+        "id": "AoDwmxbLn766"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "sns.set_theme(style=\"white\", context=\"talk\")"
+      ],
+      "metadata": {
+        "id": "lVQmRG3Qooqx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rs = np.random.RandomState(8)\n",
+        "\n",
+        "# Set up the matplotlib figure\n",
+        "f, (ax1, ax2, ax3) = plt.subplots(3, 1, figsize=(7, 5), sharex=True)\n",
+        "\n",
+        "# Generate some sequential data\n",
+        "x = np.array(list(\"ABCDEFGHIJ\"))\n",
+        "y1 = np.arange(1, 11)\n",
+        "sns.barplot(x=x, y=y1, palette=\"rocket\", ax=ax1)\n",
+        "ax1.axhline(0, color=\"k\", clip_on=False)\n",
+        "ax1.set_ylabel(\"Sequential\")\n",
+        "\n",
+        "# Center the data to make it diverging\n",
+        "y2 = y1 - 5.5\n",
+        "sns.barplot(x=x, y=y2, palette=\"vlag\", ax=ax2)\n",
+        "ax2.axhline(0, color=\"k\", clip_on=False)\n",
+        "ax2.set_ylabel(\"Diverging\")\n",
+        "\n",
+        "# Randomly reorder the data to make it qualitative\n",
+        "y3 = rs.choice(y1, len(y1), replace=False)\n",
+        "sns.barplot(x=x, y=y3, palette=\"deep\", ax=ax3)\n",
+        "ax3.axhline(0, color=\"k\", clip_on=False)\n",
+        "ax3.set_ylabel(\"Qualitative\")\n",
+        "\n",
+        "# Finalize the plot\n",
+        "sns.despine(bottom=True)\n",
+        "plt.setp(f.axes, yticks=[])\n",
+        "plt.tight_layout(h_pad=2)"
+      ],
       "metadata": {
         "id": "PEqFnL3rjd9C"
       },
