--- a/Ejercicios/Ejercicio: Algoritmos.ipynb
+++ b/Ejercicios/Ejercicio: Algoritmos.ipynb
@@ -8,7 +8,7 @@
         "_kP__ZxgeLOY"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNsq3z2vXRZ5lUViNXapwRW",
+      "authorship_tag": "ABX9TyMT0sjH+Cq2UuI0BUcOj485",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicios/Ejercicio: Algoritmos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicios/Ejercicio%3A%20Algoritmos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,7 @@
         "id": "CpkgjubcxEL_"
       },
       "source": [
-        "# Dessarrollando un algoritmo\n",
+        "# Desarrollando un algoritmo\n",
         "Escribir un programa que pregunte al usuario el radio de un circulo, calcule y regrese el área.\n",
         "\n",
         "**»»** Pasos <br>\n",
@@ -63,7 +63,7 @@
         "`print(\"El área del círculo con radio\", radio, \"es:\", area)`\n",
         "<br>\n",
         "<br>\n",
-        "**»»** Ejercicio: \n",
+        "**»»** Ejercicio:\n",
         "1. Redondear el resultado\n",
         "2. Cambiar (radio * radio) por radio al cuadrado\n"
       ]
@@ -187,7 +187,7 @@
         "\n",
         "\n",
         "\n",
-        "**»» Retos**: \n",
+        "**»» Retos**:\n",
         "<br>\n",
         "- Escribe el código en menos de 6 líneas de código (intermedio)\n",
         "- Guarda los números que son múltiplos de 3 o 5 en una lista y después sumar los elementos de la lista.\n",
@@ -372,14 +372,14 @@
       },
       "source": [
         "**Retos**\n",
-        "- Escribe tú código en menos de 10 líneas de código (dificultad media) o <br> \n",
+        "- Escribe tú código en menos de 10 líneas de código (dificultad media) o <br>\n",
         "en menos de 7 líneas de código (dificultada avanzado). Tip: Usa operador ternario https://ellibrodepython.com/if-python#operador-ternario\n",
         "- Encuentra el capicúa más grande múltiplo de 5, producto de usar dos números de tres digítos\n",
         "\n",
         "```\n",
         "# Resultado para el producto capicúa más grande de dos números de tres digítos y múltiplo de 5\n",
         ">>> print(capicua)\n",
-        "595595 \n",
+        "595595\n",
         "```\n"
       ]
     },
