--- a/Ejercicios/Ejercicio: Algoritmos.ipynb
+++ b/Ejercicios/Ejercicio: Algoritmos.ipynb
@@ -8,7 +8,7 @@
         "_kP__ZxgeLOY"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMT0sjH+Cq2UuI0BUcOj485",
+      "authorship_tag": "ABX9TyPj9sWXTyWAERt0rbCieRZL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "id": "CpkgjubcxEL_"
       },
       "source": [
-        "# Desarrollando un algoritmo\n",
+        "# 1. Dessarrollando un algoritmo\n",
         "Escribir un programa que pregunte al usuario el radio de un circulo, calcule y regrese el área.\n",
         "\n",
         "**»»** Pasos <br>\n",
