Test para guardar cambios

--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP1wtS3OtCXiKGLxtwJ50p",
+      "authorship_tag": "ABX9TyNur/CXS7zSH8n6I4hEWewO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicios/Ejercicio%3A%20Condicionales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Este es un test"
+      ],
+      "metadata": {
+        "id": "nD3_k5i-T9vM"
+      }
     },
     {
       "cell_type": "markdown",
@@ -204,7 +213,7 @@
         "pd.DataFrame(columns=['Ingresos', 'Tasa impositiva'],\n",
         "             index=[1, 2, 3, 4],\n",
         "             data=[['Menos de 1,000', '5 %'],\n",
-        "                   ['Entre 1,000 y 2,000', '15 %'], \n",
+        "                   ['Entre 1,000 y 2,000', '15 %'],\n",
         "                   ['Entre 2,000 y 3,000', '20 %'],\n",
         "                   ['Más de 3,000', '30 %']])"
       ]
@@ -236,7 +245,7 @@
       "cell_type": "markdown",
       "source": [
         "2. Clasificación de climas <br>\n",
-        "Los climas se pueden clasificar de acuerdo a la precipitación anual y la temperatura media. \n",
+        "Los climas se pueden clasificar de acuerdo a la precipitación anual y la temperatura media.\n",
         "\n",
         "Genera un programa que ayude a automatizar la clasficacion del clima de acuerdo a:\n",
         "\n",
@@ -282,7 +291,7 @@
       "cell_type": "markdown",
       "source": [
         "3. Palabras especiales  <br>\n",
-        "Escribe un programa que separe las palabras que son impares e inicien con una consontante, y las palabras que son pares e inicien con una vocal. \n",
+        "Escribe un programa que separe las palabras que son impares e inicien con una consontante, y las palabras que son pares e inicien con una vocal.\n",
         "> a) Obten la longitud (número letras) de la palabra. Usa la función len. <br>\n",
         "b) Identifica si la palabra es par o impar <br>\n",
         "c) Identifica si la palabra inicia con consonante o vocal. Usa el método startswith. <br>\n",
