--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNur/CXS7zSH8n6I4hEWewO",
+      "authorship_tag": "ABX9TyM+nSb7o8a53H89xBbwHYe+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Este es un test"
+        "##OTro test"
       ],
       "metadata": {
-        "id": "nD3_k5i-T9vM"
+        "id": "KFscswIbWMoe"
       }
     },
     {
