--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+nSb7o8a53H89xBbwHYe+",
+      "authorship_tag": "ABX9TyOdEL1VvCailCUgv/cHoftr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,22 @@
       ],
       "metadata": {
         "id": "KFscswIbWMoe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tercer test"
+      ],
+      "metadata": {
+        "id": "fYR2hTJoWqyv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "D9LA7mLEWqtU"
       }
     },
     {
