--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdEL1VvCailCUgv/cHoftr",
+      "authorship_tag": "ABX9TyNKgpD7Zwz4aewwMNSHdS3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,26 +38,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tercer test"
+        "# Ejercicios con condicionales"
       ],
       "metadata": {
-        "id": "fYR2hTJoWqyv"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "D9LA7mLEWqtU"
+        "id": "JnAaAHKbtTkr"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Ejercicios con condicionales"
+        "# Cuarto test"
       ],
       "metadata": {
-        "id": "JnAaAHKbtTkr"
+        "id": "yYiKj1tzW1r-"
       }
     },
     {
