--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMws6slE/wfJaCFqee/pnI9",
+      "authorship_tag": "ABX9TyNDLmBIAM7Xgx1R9yO6bzIE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,29 @@
       "metadata": {
         "id": "JnAaAHKbtTkr"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello world\")"
+      ],
+      "metadata": {
+        "id": "IXh-sR1vYHIM",
+        "outputId": "6f49a8e8-7bd0-4884-fa06-ff160285b9a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
