--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDLmBIAM7Xgx1R9yO6bzIE",
+      "authorship_tag": "ABX9TyM+KU/MsLoGlFte3fen+w5U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,29 +63,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "print(\"hello world\")"
-      ],
-      "metadata": {
-        "id": "IXh-sR1vYHIM",
-        "outputId": "6f49a8e8-7bd0-4884-fa06-ff160285b9a9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello world\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "1. Impuestos\n",
@@ -94,6 +71,29 @@
       "metadata": {
         "id": "fbz409a_tWyY"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(9999999)"
+      ],
+      "metadata": {
+        "id": "Aj0hExLXYn3l",
+        "outputId": "67b22840-b672-4ca3-afb3-06715a7d1262",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9999999\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
