--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+KU/MsLoGlFte3fen+w5U",
+      "authorship_tag": "ABX9TyN0j6qwqcjGspHzuT3YntRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,29 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"test\")"
+      ],
+      "metadata": {
+        "id": "87WUoj_vZYTj",
+        "outputId": "8df25e39-318d-4d6a-8297-2dc33ae6ee92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Ejercicios con condicionales"
@@ -71,29 +94,6 @@
       "metadata": {
         "id": "fbz409a_tWyY"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(9999999)"
-      ],
-      "metadata": {
-        "id": "Aj0hExLXYn3l",
-        "outputId": "67b22840-b672-4ca3-afb3-06715a7d1262",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "9999999\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
