--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0j6qwqcjGspHzuT3YntRz",
+      "authorship_tag": "ABX9TyPo9VMfhIrec4gvm54xAZ0X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,13 +65,36 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "test\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"second test\")"
+      ],
+      "metadata": {
+        "id": "msrs5TABZxSj",
+        "outputId": "8dbb2e5f-5512-4e91-ad83-dbe9e2775be0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "second test\n"
           ]
         }
       ]
