--- a/Depuración_de_código.ipynb
+++ b/Depuración_de_código.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCkWOYDYNlh1JVZtFCRYSE",
+      "authorship_tag": "ABX9TyOZugPPJGXTM02NehKseymM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Depuraci%C3%B3n_de_c%C3%B3digo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Código de prueba"
+      ],
+      "metadata": {
+        "id": "X7nhuhd3aLoK"
+      }
     },
     {
       "cell_type": "markdown",
@@ -55,7 +64,7 @@
         "Algunos errores de sintaxis nos mostrarán un error (\"Exceptions\") en la pantalla.\n",
         "\n",
         "\n",
-        "- **NameError**: Ocurre cuando intetamos acceder a una variable o función que **aún no está definida**. \n",
+        "- **NameError**: Ocurre cuando intetamos acceder a una variable o función que **aún no está definida**.\n",
         "- **SyntaxError:** EOL while scanning string literal. EOL (End of line). Python llegó al final de una línea mientras pasaba por una cadena de caracteres. Recuerda siempre cerrar las \"comillas\".\n",
         "- **SyntaxError:** unexpected EOF while parsing. Puede deberse a que no cerramos una función con un paréntesis."
       ],
