--- a/1. Tipos de datos básicos.ipynb
+++ b/1. Tipos de datos básicos.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/1.%20Tipos%20de%20datos%20b%C3%A1sicos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -18,7 +18,7 @@
       "source": [
         "# Tipos de Datos\n",
         "\n",
-        "Los tipos de datos son un conjunto de valores con características y propiedades determinadas. \n",
+        "Los tipos de datos son un conjunto de valores con características y propiedades determinadas.\n",
         "\n",
         "Los datos básicos son:\n",
         "\n",
@@ -86,61 +86,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ddr_Tf7HtPsp"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "hello world\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(\"hello world\")\n",
-        "entero_2 = 1234\n",
         "entero = 124 # int"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "xO1Mzw9ytZjU"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "124\n",
-            "124\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(entero)\n",
         "print(entero)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "GuLtDXTGtdDM"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'int'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(type(entero))"
       ]
@@ -156,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "z3lbzYrGtrwA"
       },
@@ -356,13 +328,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "NK4YMFVTseya"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "MrBK1IYm5TGP"
       },
       "outputs": [],
       "source": [
-        "dolar = float(19.94)"
+        "dolar = float(\"19.94\")"
       ]
     },
     {
@@ -399,6 +382,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "texto: str = \"23\" # Cadenas de caracteres o str\n",
+        "type(texto) # comprobar tipo de dato"
+      ],
+      "metadata": {
+        "id": "nAHwFQgls7uC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "LaUSuCUNAmA9"
@@ -417,7 +412,7 @@
       },
       "outputs": [],
       "source": [
-        "flotante = 23.01 # número flotante \n",
+        "flotante: float = 23.01 # número flotante\n",
         "type(flotante) # comprobar tipo de dato"
       ]
     },
@@ -455,7 +450,7 @@
       },
       "outputs": [],
       "source": [
-        "a, b, c = 5, 3.2, \"Hola\" \n",
+        "a, b, c = 5, 3.2, \"Hola\"\n",
         "\n",
         "print(a, type(a))\n",
         "print(b, type(b))\n",
@@ -571,7 +566,7 @@
         "id": "LRFndVgzCCa3"
       },
       "source": [
-        "3. Crea tres variables y nombralas como quieras. \n",
+        "3. Crea tres variables y nombralas como quieras.\n",
         "Asignales un valor tal que sumados den 13."
       ]
     },
@@ -633,11 +628,8 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyOf97UJNqKl1xsM6C1ZJL5h",
-      "collapsed_sections": [],
-      "include_colab_link": true,
-      "mount_file_id": "1M0Bi6-x7TXZcIIGK32q-v4kPDE7QbWVL",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
